[project]
name = "pyps"
version = "0.1.1"
description = "Calculate the Stark effect in positronium"
readme = "README.rst"
requires-python = ">=3.14"
dependencies = [
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "scipy>=1.18.0",
    "sympy>=1.14.0",
    "tqdm>=4.68.3",
]

[project.optional-dependencies]
examples = [
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "smtools",
    "tabulate>=0.10.0",
    "version-information>=1.0.4",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
smtools = { git = "https://github.com/ad3ller/Stark-map-tools.git" }
